@@ -3,6 +3,7 @@ Revision history for Padre-Plugin-SpellCheck
 {{$NEXT}}
         - rename method 'spell_preferences' to 'plugin_preferences',
           so that the dialog can also be called from the plugin manager (ZENOG)
+        - add support for some filters (XML, HTML, LaTeX) (ZENOG)
 
 1.2    2010.10.29
         - Removed Test::NeedsDisplay dependency (AZAWAWI)
